--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -165,7 +165,7 @@
                                                 <h4>{{ post.subject }}</h4>
                                                 <div class="post-meta">
                                                     <span class="mr-2">{{ post.created_at }} </span> &bullet;
-                                                    <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                                    <span class="ml-2"><span class="fa fa-comments"></span> {{ post.comments_count }}</span>
                                                 </div>
                                             </div>
                                         </a>
