--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                                         <div class="post-meta">
                                             <span class="category">{{ post.category.name }}</span>
                                             <span class="mr-2">{{ post.created_at.date }} </span> &bullet;
-                                            <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                            <span class="ml-2"><span class="fa fa-comments"></span> {{ post.comments_count }}</span>
                                         </div>
                                         <h3>{{ post.name }}</h3>
                                         <p>{{ post.subject }}</p>
@@ -38,7 +38,7 @@
                                 <div class="post-meta">
                                     <span class="category">{{ post.category.name }}</span>
                                     <span class="mr-2">{{ post.created_at.date }}</span> &bullet;
-                                    <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                    <span class="ml-2"><span class="fa fa-comments"></span> {{ post.comments_count }}</span>
                                 </div>
                                 <h3>{{ post.title }}</h3>
                             </div>
@@ -68,7 +68,7 @@
                                         <div class="post-meta">
                                             <span class="category">{{ first.category.name }}</span>
                                             <span class="mr-2">{{ first.created_at.date }}</span> &bullet;
-                                            <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                            <span class="ml-2"><span class="fa fa-comments"></span> {{ first.comments_count }} </span>
                                         </div>
                                         <h2>{{ first.title }}</h2>
                                     </div>
@@ -123,7 +123,7 @@
     <span class="category">{{ pop.category.name }}</span>
     <span class="mr-2"
                                             {{ pop.created_at }}</span> &bullet;
-                                        <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                        <span class="ml-2"><span class="fa fa-comments"></span> {{ pop.comments_count }}</span>
                                 </div>
                                 <h2>{{ pop.title }}</h2>
                                 </span>
