--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -30,10 +30,10 @@
     </div>
 
     <div class="sidebar-box">
-        <h3 class="heading">Popular Posts</h3>
+        <h3 class="heading">More Discussed Posts</h3>
         <div class="post-entry-sidebar">
             <ul>
-                {% for post in latest_posts %}
+                {% for post in popular_posts %}
                     <li>
                         <a href="/blog/{{ post.id }}/?cat={{ post.category.id }}">
                             <img src="{{ post.image.url }}" alt="Image placeholder" class="mr-4">
@@ -41,7 +41,7 @@
                                 <h4>{{ post.title }}</h4>
                                 <div class="post-meta">
                                     <span class="mr-2" {{ post.created_at }} </span> &bullet;
-                                    <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
+                                    <span class="ml-2"><span class="fa fa-comments"></span> {{ post.comments_count }}</span>
                                 </div>
                             </div>
                         </a>
@@ -55,7 +55,7 @@
         <h3 class="heading">Categories</h3>
         <ul class="categories">
             {% for category in categories %}
-                <li><a href="/category/?cat={{ category.id }}">{{ category.name }} <span>-</span></a></li>
+                <li><a href="/category/?cat={{ category.id }}">{{ category.name }} <span> </span></a></li>
             {% endfor %}
         </ul>
     </div>
